# CATERPillar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  args.conf  args3.conf  args4.conf  axon_simulation.swc  axongammadistribution_cluster.cpp  axongammadistribution_cluster.h  axons_icvf_0.30_cap_10_vox_10.swc  axons_icvf_0.30_cap_10_vox_10_straight.swc  axons_icvf_0.30_cap_1_vox_10.swc  axons_icvf_0.30_cap_1_vox_10_straight.swc  axons_icvf_0.30_cap_20_vox_10.swc  axons_icvf_0.30_cap_20_vox_10_straight.swc  axons_icvf_0.50_cap_10_vox_10.swc  axons_icvf_0.50_cap_1_vox_10.swc  axons_icvf_0.50_cap_20_vox_10.swc  axons_icvf_0.50_cap_5_vox_10.swc  compiler.sh  compiler_.sh  compiler_mac.sh  create_swelling_swc.py  example_config.json  growth_icvf_0.30_cap_10_vox_10.swc  growth_icvf_0.30_cap_10_vox_10_0.swc  growth_icvf_0.30_cap_10_vox_10_0_straight.swc  growth_icvf_0.30_cap_10_vox_10_straight.swc  growth_icvf_0.30_cap_10_vox_30_straight.swc  growth_icvf_0.30_cap_1_vox_10.swc  growth_icvf_0.30_cap_1_vox_10_0.swc  growth_icvf_0.30_cap_1_vox_10_0_straight.swc  growth_icvf_0.30_cap_1_vox_10_straight.swc  growth_icvf_0.30_cap_1_vox_30_straight.swc  growth_icvf_0.30_cap_20_vox_10.swc  growth_icvf_0.30_cap_20_vox_10_0.swc  growth_icvf_0.30_cap_20_vox_10_0_straight.swc  growth_icvf_0.30_cap_20_vox_10_straight.swc  growth_icvf_0.50_cap_10_vox_10.swc  (+108 more)
Caterpillar/: Caterpillar  Caterpillar.pro  Makefile  ScatterDataModifier.cpp  mainwindow.cpp  mainwindow.h  openglwindow.cpp  openglwindow.h  slidergroup.h
GUI/: Caterpillar  Caterpillar.pro  Makefile  ScatterDataModifier.cpp  ScatterDataModifier.h  main.cpp  mainwindow.cpp  mainwindow.h  openglwindow.cpp  openglwindow.h  slidergroup.cpp  slidergroup.h
build-Caterpillar-Desktop-Debug/: Makefile  moc_ScatterDataModifier.cpp  moc_mainwindow.cpp  moc_slidergroup.cpp
runtime-packing/: voxel1.swc  voxel1.txt  voxel2.swc  voxel2.txt  voxel3.swc  voxel3.txt  voxel4.swc  voxel4.txt
size_runtime/: voxel50.txt
src/: Animation.cpp  Animation.h  Axon.cpp  Axon.h  Blood_Vessel.cpp  Blood_Vessel.h  Glial.cpp  Glial.h  Growth-Animation  axongammadistribution.cpp  axongammadistribution.h  core_logic.cpp  core_logic.h  dynamic_sphere.cpp  dynamic_sphere.h  grow_axons.cpp  grow_axons.h  grow_blood_vessels.cpp  grow_blood_vessels.h  grow_cells.cpp  grow_cells.h  main.cpp  (+13 more)
(+18 files in other folders)
